--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-streamlit==1.47.0
-langchain==0.2.0
-langgraph==0.0.34
-google-generativeai==0.5.0
-pymongo==4.7.0
-python-dotenv==1.0.1
-pandas==2.2.2
-numpy==1.26.4
-geopy==2.4.1
-twilio==8.20.0
-streamlit-aggrid==0.3.4.post3
-plotly==5.18.0
-pydeck==0.8.1
+streamlit
+langchain
+langgraph
+google-generativeai
+pymongo
+python-dotenv
+pandas
+numpy
+geopy
+twilio
+streamlit-aggrid
+plotly
+seaborn
+scikit-learn
+pydeck
